
subprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    group = "ccd-sdk"
    version = '0.1.8'
    publishing {
        repositories {
            maven {
                url = "${project.rootDir}/repository"
                name = "repo"
            }
        }
    }

    compileJava   {
        sourceCompatibility = '1.8'
        targetCompatibility = '1.8'
    }
}
